--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <script src="./index.js"></script>
+    <script src="./index.js" type="module"></script>
     <canvas
       width="1080"
       height="768"
